- izboljšava: baza ni več kodirana v programu ampak jo lahko uporabnik izbere ob prvem zagonu programa
- izboljšava: uporabnik lahko med delom zapre ali zamenja bazo podatkov
- izboljšava: uporabnik lahko kreira novo bazo podatkov
- izboljšava: pri vnosu baze podatkov se šifranti ne brišejo več
- izboljšava: pri odpiranju program ne spremlja več vseh tabel, ampak samo še novosti

0.9.35
----------
- napaka: privzete nastavitve tiskanaj niso enake tisti, ki so bile do sedaj vgrajene v program, zato so bili rezultati tiskanja drugačni od dosedanjih
- izboljšava: dodana možnost tiskanja v dvostranskem načinu
- izboljšava: prehodi med različnimi privzetimi vrednostmi tiskanja

0.9.34
----------
- napaka: dodana poštna številka in pošta pri prejemniku in predlagatelja poštnega naloga
- izboljšava: izbris predloge Sandy


0.9.33
----------
- napaka: odpravljen hrošč, ki je povzročil zrušitev programa v pregledu delovnih, dopustniških in bolniških dni

0.9.32
----------
- napaka: popravljen manjkajoči naziv prejemnika potnega naloga
- izboljšava: popravljena baza, ki ima vnešene različne nazive potnega naloga
- izboljšava: pri tiskanju ne išče več naziva prejemnika potnega naloga po nazivu ampak samo iz besedila

0.9.31
----------
- manjši popravki
- uskladitev kode med različnimi vejami razvoja
- testna izdaja za ocenitev (ne)obstoja popravkov

0.9.30
----------
- napaka: pri brisanju stranke se izbrišejo tudi že obstoječi računi in projekti
- posodobitev: program ima svoj lasten seznam delavnih dni po letih, ki ga zna poiskati, dešifrirati in shraniti
- olepšava: manjši velikost pisave v računih
- olepšava: poudarjeni zneski za plačilo
- napaka: šifra storitve v dobropisu ponovno vidna
- napaka: po izbrisu dobropisa se statusi računov ne obnovijo
- izboljšava: možnost brisanja stopnje ddv pri prejetih računih
- napaka: pri spremembi statusa oddaje računa v računovodstvo se podvoji tvorba računa
- izboljšava: podni nalog lahko enostavno skopirate na novo

0.9.29